# NebulaTools

./: .gitignore  Cargo.toml  LICENSE  README.md  build.py  build.sh  build_and_release.py  config.json
assets/: lang_en.json  lang_zh.json
assets/lang/: en_US.json  ja_JP.json  zh_CN.json
docs/: nbl_format_en.md
scripts/: check_i18n.py
src/: app.rs  editor.rs  i18n.rs  main.rs  math.rs  particleex.pest  particleex.rs  player.rs  renderer.rs
src/ui/: app.rs  creator.rs  creator_compile.rs  creator_objects.rs  creator_ui.rs  edit.rs  mod.rs  multimedia_ui.rs  particleex_ui.rs  preview.rs  scene_ui.rs  welcome.rs
