[package]
name = "nebula_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27" 
egui = "0.27"
rfd = "0.14"    
byteorder = "1.5" 
zstd = "0.13" 
anyhow = "1.0" 
serde = { version = "1.0", features = ["derive"] }
bytemuck = { version = "1.15", features = ["derive"] }
egui-chinese-font = "0.1"
glow = "0.13"
serde_json = "1.0.149"
